--- a/vinautocheck/vincheck/templates/vincheck/password_reset.html
+++ b/vinautocheck/vincheck/templates/vincheck/password_reset.html
@@ -11,8 +11,14 @@
     <form method="post">
       <h1>Восстановить пароль</h1>
       {% csrf_token %}
+      {% if request.user.is_authenticated %}
+      <input type="email" name="email" autocomplete="email" maxlength="254" required
+           id="id_email" class="txtb" placeholder="Почта" value="{{ user.email }}">
+      {% else %}
       <input type="email" name="email" autocomplete="email" maxlength="254" required
            id="id_email" class="txtb" placeholder="Почта">
+      {% endif %}
+
       <input type="submit"  value="Отправить" class="signup-btn">
     </form>
   </div>
