Подключил Ралинину страничку onlinedocument, на неё сейчас можно попасть с чекбокса под названием checkbox

--- a/vinautocheck/vincheck/templates/vincheck/check_box.html
+++ b/vinautocheck/vincheck/templates/vincheck/check_box.html
@@ -28,7 +28,7 @@
     <p>Итого<сумма></p>
   </div>
   <div class='button_oplat'>
-    <a href="{% url 'form_of_payment' %}" class="oplata">Оплатить картой</a>
+    <a href="{% url 'online_document' %}" class="oplata">Оплатить картой</a>
   </div>
   <div class="car">
     <img src="{% static 'vincheck/images/car.png' %}" class="go">
