Подготовил страницу onlinedociment для подключения парсера

--- a/vinautocheck/vincheck/templates/vincheck/onlinedocument.html
+++ b/vinautocheck/vincheck/templates/vincheck/onlinedocument.html
@@ -36,7 +36,7 @@
                     <div class="_2qTXf">
                     <dl class="_2qTXf_left">
                       <dt>VIN</dt>
-                      <dd>XW8AN2XXXFXXXXXXX</dd>
+                      <dd>{{ VIN }}</dd>
                       <dt>Госномер</dt>
                       <dd>Номер</dd>
                       <dt>Номер кузова</dt>
