--- a/vinautocheck/vincheck/templates/vincheck/check_box2.html
+++ b/vinautocheck/vincheck/templates/vincheck/check_box2.html
@@ -26,7 +26,7 @@
       <p>VIN:{{ message }}</p>
     </div>
     <div class="itogo">
-      <p>Итого:{{ checkbox }}</p>
+      <p>Итого: {{ checkbox }} BYN</p>
     </div>
     <div class='button_oplat'>
       <button type="submit" class="oplata">Оплатить картой</button>
