Доделала страничку с моими отчетами (пока без адаптации)

--- a/vinautocheck/vincheck/templates/vincheck/my_inf.html
+++ b/vinautocheck/vincheck/templates/vincheck/my_inf.html
@@ -40,6 +40,12 @@
                        <p><input name="VIN-код" placeholder="Укажите VIN" class="your_vin"></p>
                       <a href = "" class="second_button" request> Найти </a>
                   </form>
+                  <form class="box" method="post">
+                      <div class ='otchet'>
+                          <pre>Дата отчета               Название машины                      VIN                      Тип отчета</pre>
+                          <pre>22.05.2022               ВАЗ2114 ЛАДА САМАРА             <a href =''>XTA21144094786239</a>      Онлайн(без реестра залогов РБ)</pre>
+                      </div>
+                  </form>
             </main>
         </div>
     </body>
@@ -202,5 +208,16 @@ footer {
 
 
 .dropdown:hover .dropbtn {background-color: #f43648;}
+  .otchet{
+    box-sizing: border-box;
+    width: 70%;
+    margin-left: 16%;
+    padding: 10PX;
+    background-color: #d0e3f7;
+    border-radius:24PX;
+    display: grid;
+    font-size: 17px;
+    font-family: "Montserrat", san-serif;
+  }
 
 </style>
