--- a/vinautocheck/vincheck/templates/vincheck/my_inf.html
+++ b/vinautocheck/vincheck/templates/vincheck/my_inf.html
@@ -40,12 +40,36 @@
                        <p><input name="VIN-код" placeholder="Укажите VIN" class="your_vin"></p>
                       <a href = "" class="second_button" request> Найти </a>
                   </form>
-                  <form class="box" method="post">
-                      <div class ='otchet'>
-                          <pre>Дата отчета               Название машины                      VIN                      Тип отчета</pre>
-                          <pre>22.05.2022               ВАЗ2114 ЛАДА САМАРА             <a href =''>XTA21144094786239</a>      Онлайн(без реестра залогов РБ)</pre>
-                      </div>
-                  </form>
+                      <form class="box" method="post">
+                          <div class="footer_blocks">
+                              <div class ='otchet'>
+                                  <a class="footer_block">
+                                    Дата отчета
+                                  </a>
+                                <a class="footer_block">
+                                    Название машины
+                                </a>
+                                <a class="footer_block">
+                                    VIN
+                                </a>
+                                <a class="footer_block">
+                                    Тип отчета
+                                </a>
+                                <a class="footer_block">
+                                    22.05.2022
+                                </a>
+                                <a class="footer_block">
+                                    ВАЗ2114 ЛАДА САМАРА
+                                </a>
+                                <a class="footer_block" href="">
+                                   XTA21144094786239
+                                </a>
+                                <a class="footer_block">
+                                    Онлайн(без реестра залогов РБ)
+                                </a>
+                              </div>
+                          </div>
+                      </form>
             </main>
         </div>
     </body>
@@ -58,12 +82,6 @@ html, body {
 body {
   font-family: "montserrat",sans-serif;
   background-color: #ddeefc;
-}
-[class*="_container"] {
-   max-width: 1200px;
-   margin: 0 auto;
-   padding: 0 15px;
-
 }
 
 .wrapper {
@@ -216,8 +234,47 @@ footer {
     background-color: #d0e3f7;
     border-radius:24PX;
     display: grid;
-    font-size: 17px;
+    font-size: 16px;
     font-family: "Montserrat", san-serif;
   }
+.otchet {
+    padding: 30px 10px 30px 10px;
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-row-gap: 10px;
+    margin: auto;
+    text-align: center;
 
+}
+.footer_block {
+    color: black;
+    font-family: "Montserrat";
+    font-size: 16px;
+    letter-spacing: normal;
+    line-height: 22px;
+}
+@media (max-width: 767.98px){
+
+.otchet {
+    padding: 30px 10px 30px 10px;
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-row-gap: 10px;
+    margin: auto;
+    text-align: center;
+
+}
+@media (max-width: 992.98px){
+    .otchet{
+        grid-template-columns: 50% 50%;
+    }
+}
+@media (max-width: 767.98px){
+    .otchet{
+        grid-template-columns: 100%;
+        margin: auto;
+  }
+    }
 </style>
