Готовая страница my_inf (с адаптацией)

--- a/vinautocheck/vincheck/templates/vincheck/my_inf.html
+++ b/vinautocheck/vincheck/templates/vincheck/my_inf.html
@@ -44,28 +44,20 @@
                           <div class="footer_blocks">
                               <div class ='otchet'>
                                   <a class="footer_block">
-                                    Дата отчета
+                                      <strong>Дата отчета</strong>
+                                    <p>22.05.2022</p>
                                   </a>
                                 <a class="footer_block">
-                                    Название машины
+                                    <strong>Название машины</strong>
+                                    <p>ВАЗ2114 ЛАДА САМАРА</p>
                                 </a>
                                 <a class="footer_block">
-                                    VIN
+                                    <strong>VIN</strong>
+                                    <p>XTA21144094786239</p>
                                 </a>
                                 <a class="footer_block">
-                                    Тип отчета
-                                </a>
-                                <a class="footer_block">
-                                    22.05.2022
-                                </a>
-                                <a class="footer_block">
-                                    ВАЗ2114 ЛАДА САМАРА
-                                </a>
-                                <a class="footer_block" href="">
-                                   XTA21144094786239
-                                </a>
-                                <a class="footer_block">
-                                    Онлайн(без реестра залогов РБ)
+                                    <strong>Тип отчета</strong>
+                                    <p>Онлайн(без реестра залогов РБ)</p>
                                 </a>
                               </div>
                           </div>
@@ -255,7 +247,10 @@ footer {
     line-height: 22px;
 }
 @media (max-width: 767.98px){
+    .your_vin {
+        padding: 10px 30px 10px 10px;
 
+    }
 .otchet {
     padding: 30px 10px 30px 10px;
     border-radius: 10px;
