--- a/vinautocheck/vincheck/templates/vincheck/my_inf.html
+++ b/vinautocheck/vincheck/templates/vincheck/my_inf.html
@@ -40,6 +40,7 @@
                        <p><input name="VIN-код" placeholder="Укажите VIN" class="your_vin"></p>
                       <a href = "" class="second_button" request> Найти </a>
                   </form>
+                  <p></p>
                       <form class="box" method="post">
                           <div class="footer_blocks">
                               <div class ='otchet'>
@@ -62,6 +63,31 @@
                               </div>
                           </div>
                       </form>
+                  </p>
+                  <p>
+                  <form class="box" method="post">
+                          <div class="footer_blocks">
+                              <div class ='otchet'>
+                                  <a class="footer_block">
+                                      <strong>Дата отчета</strong>
+                                    <p>22.05.2022</p>
+                                  </a>
+                                <a class="footer_block">
+                                    <strong>Название машины</strong>
+                                    <p>ВАЗ2114 ЛАДА САМАРА</p>
+                                </a>
+                                <a class="footer_block">
+                                    <strong>VIN</strong>
+                                    <p>XTA21144094786239</p>
+                                </a>
+                                <a class="footer_block">
+                                    <strong>Тип отчета</strong>
+                                    <p>Онлайн(без реестра залогов РБ)</p>
+                                </a>
+                              </div>
+                          </div>
+                      </form>
+                  </p>
             </main>
         </div>
     </body>
