Пофиксила еще пару моментов

--- a/vinautocheck/vincheck/templates/vincheck/my_inf.html
+++ b/vinautocheck/vincheck/templates/vincheck/my_inf.html
@@ -40,7 +40,7 @@
                        <p><input name="VIN-код" placeholder="Укажите VIN" class="your_vin"></p>
                       <a href = "" class="second_button" request> Найти </a>
                   </form>
-                  <p></p>
+                  <p>
                       <form class="box" method="post">
                           <div class="footer_blocks">
                               <div class ='otchet'>
@@ -52,7 +52,7 @@
                                     <strong>Название машины</strong>
                                     <p>ВАЗ2114 ЛАДА САМАРА</p>
                                 </a>
-                                <a class="footer_block">
+                                <a class="footer_block" href="">
                                     <strong>VIN</strong>
                                     <p>XTA21144094786239</p>
                                 </a>
@@ -76,7 +76,7 @@
                                     <strong>Название машины</strong>
                                     <p>ВАЗ2114 ЛАДА САМАРА</p>
                                 </a>
-                                <a class="footer_block">
+                                <a class="footer_block" href="">
                                     <strong>VIN</strong>
                                     <p>XTA21144094786239</p>
                                 </a>
