--- a/vinautocheck/vincheck/templates/vincheck/check_box.html
+++ b/vinautocheck/vincheck/templates/vincheck/check_box.html
@@ -19,14 +19,18 @@
     <div class='otchet'>
       <p>Онлайн отчет + офлайн отчет</p>
     </div>
-      <input class="checkbox_input" type="checkbox" value="checkbox_1" id="checkbox_1" name="checkbox_1">
-    <label class="checkbox_label" for="checkbox_1">Проверить реестр залогов РБ</label>
+      <input class="checkbox_input" type="checkbox" value="checkbox_1" id="checkbox_1" name="checkbox_1"
+        data-id="34" data-cost1="9" data-title="Проверить реестр залогов РБ">
+        <span>Проверить реестр залогов РБ</span>
     <p>Отчету n дней</p>
     <p>VIN:{{ message }}</p>
   </div>
-  <div class="itogo">
-    <p>Итого: {{ checkbox }} BYN</p>
-  </div>
+      <div class="priceInfo">
+      <div class="item">
+          <b class="title">Итого (BYN):</b>
+          <b class="price" id="aClassPrice-1">10 </b>
+      </div>
+    </div>
   <div class='button_oplat'>
     <a href="{% url 'online_document' %}" class="oplata">Оплатить картой</a>
   </div>
@@ -74,7 +78,7 @@ body {
   height: 20px;
   position: relative;
 }
-.itogo{
+.item{
   position: relative;
   margin-top: 8%;
   font-size: 30px;
@@ -109,7 +113,7 @@ body {
     margin-top: -64%;
     margin-left: 10%;
   }
-  .itogo{
+  .item{
     margin-top: 25%;
   }
   .button_oplat{
@@ -122,7 +126,7 @@ body {
     margin-top: -70%;
     margin-left: 10%;
   }
-  .itogo{
+  .item{
     margin-top: 25%;
   }
   .button_oplat{
@@ -131,3 +135,12 @@ body {
   }
 }
 </style>
+<script>
+        document.querySelectorAll(".checkbox [type=checkbox]").forEach(e => e.onchange = toggleServices);
+        function toggleServices(e) {
+            let sums = [10, 0, 0];
+            document.querySelectorAll(".checkbox [type=checkbox]:checked")
+                .forEach(e => sums.forEach((e2, i, a) => a[i] += +e.dataset["cost" + (i + 1)]));
+            sums.forEach((e, i) => { document.getElementById("aClassPrice-" + (i + 1)).textContent = e; });
+        }
+</script>
