Подключил на главную страницу всплывающее окно, которое сделала Ралина, подключено как файл mainopenpage. Пока не работает отправка вин без обнавления страницы, поэтому сейчас на главной странице две кнопки, левая для отправки вин в кэш, правая всплывающее окно. Ещё появился баг с отображением кнопки лмчного кабинета, нужно его пофиксить

--- a/vinautocheck/vincheck/templates/vincheck/check_box.html
+++ b/vinautocheck/vincheck/templates/vincheck/check_box.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class='button_back'>
-    <a href="{% url 'tovar' %}" class="back">Назад</a>
+    <a href="{% url 'main_search' %}" class="back">Назад</a>
   </div>
   <div class="checkbox">
     <div class='otchet'>
