--- a/vinautocheck/vincheck/templates/vincheck/check_box2.html
+++ b/vinautocheck/vincheck/templates/vincheck/check_box2.html
@@ -15,7 +15,7 @@
   <form action="" method="post">
     {% csrf_token %}
     <div class='button_back'>
-      <a href="{% url 'tovar' %}" class="back">Назад</a>
+      <a href="{% url 'main_search' %}" class="back">Назад</a>
     </div>
     <div class="checkbox">
       <div class='otchet'>
