--- a/vinautocheck/vincheck/templates/vincheck/mainopenpage.html
+++ b/vinautocheck/vincheck/templates/vincheck/mainopenpage.html
@@ -10,6 +10,7 @@
     <script src='{% static "vincheck/js/scripts.js" %}' defer></script>
     <title>Главная страница </title>
     <link rel="stylesheet" href='{% static "vincheck/css/style1.css" %}'>
+    <link rel="stylesheet" href='{% static "vincheck/css/style2.css" %}'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
