--- a/vinautocheck/vincheck/templates/vincheck/my_inf.html
+++ b/vinautocheck/vincheck/templates/vincheck/my_inf.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Личный кабинет</title>
+    <link rel="stylesheet" href='{% static "vincheck/css/my_inf.css" %}'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -92,210 +93,3 @@
         </div>
     </body>
     </html>
-<style media="screen">
-
-html, body {
-    height: 100%;
-}
-body {
-  font-family: "montserrat",sans-serif;
-  background-color: #ddeefc;
-}
-
-.wrapper {
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-}
-header {
-    background-color: #ddeefc;
-}
-.header_container {
-    padding-top: 30px;
-    padding-bottom: 80px;
-}
-.header_content {
-}
-.button_login {
-    background: #f43648;
-    border-radius: 5px;
-    color: white;
-    font-family: "Montserrat";
-    font-size: 17px;
-    font-weight: 600;
-    padding: 10px 30px 10px 30px;
-    position: relative;
-    float: right;
-    text-align: center;
-}
-main {
-    background-color: #ddeefc;
-}
-.main_containernarrow {
-
-}
-.main_content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.vin {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 23px;
-    border: none;
-}
-.your_vin {
-    padding: 12px 200px 11px 10px;
-    border: none;
-    border-radius: 5px 0px 0px 5px;
-
-
-}
-input::placeholder {
-    color:  #807f7f;
-    font-family: "Montserrat";
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-    letter-spacing: 0.2px;
-      }
-
-input {outline:none;}
-
-.second_button {
-    text-align: center;
-    text-decoration: none;
-    background: #f43648;
-    border: none;
-    border-radius: 0px 5px 5px 0px;
-    color: white;
-    font-family: "Montserrat";
-    font-size: 14px;
-    font-weight: 500;
-    padding: 12px 12px 11px 12px;
-    position: relative;
-    right: 2%;
-    top: 31.5%;
-    cursor: pointer;
-
-}
-
-
-footer {
-    background: #ddeefc ;
-
-}
-
-
-.dropbtn {
-  border-color: transparent;
-  background: #f43648;
-  border-radius: 5px;
-  color: white;
-  font-family: "Montserrat" ,sans-serif;
-  font-size: 17px;
-  font-weight: 300;
-  padding: 10px 30px 10px 30px;
-  text-align: center;
-}
-.dropdown {
-    justify-content: start;
-    float: right;
-    position: relative;
-    display: inline-block;
-    font-family: "Montserrat" ,sans-serif;
-
-}
-
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color:   #3f3f3f;
-    min-width: 60px;
-    border-radius: 5px;
-    width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    font-family: "Montserrat";
-
-}
-
-.dropdown-content a {
-    color: white;
-    font-family: "Montserrat" ,sans-serif;
-    font-size: 15px;
-    padding: 10px 10px 10px 10px;
-    border-radius: 5px;
-    font-weight: 700px;
-    text-align: center;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: #f43648;}
-
-
-.dropdown:hover .dropdown-content {display: block;}
-
-
-.dropdown:hover .dropbtn {background-color: #f43648;}
-  .otchet{
-    box-sizing: border-box;
-    width: 70%;
-    margin-left: 16%;
-    padding: 10PX;
-    background-color: #d0e3f7;
-    border-radius:24PX;
-    display: grid;
-    font-size: 16px;
-    font-family: "Montserrat", san-serif;
-  }
-.otchet {
-    padding: 30px 10px 30px 10px;
-    border-radius: 10px;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-row-gap: 10px;
-    margin: auto;
-    text-align: center;
-
-}
-.footer_block {
-    color: black;
-    font-family: "Montserrat";
-    font-size: 16px;
-    letter-spacing: normal;
-    line-height: 22px;
-}
-@media (max-width: 767.98px){
-    .your_vin {
-        padding: 10px 30px 10px 10px;
-
-    }
-.otchet {
-    padding: 30px 10px 30px 10px;
-    border-radius: 10px;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-row-gap: 10px;
-    margin: auto;
-    text-align: center;
-
-}
-@media (max-width: 992.98px){
-    .otchet{
-        grid-template-columns: 50% 50%;
-    }
-}
-@media (max-width: 767.98px){
-    .otchet{
-        grid-template-columns: 100%;
-        margin: auto;
-  }
-    }
-</style>
