--- a/vinautocheck/vincheck/templates/vincheck/mainopenpage.html
+++ b/vinautocheck/vincheck/templates/vincheck/mainopenpage.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src='{% static "vincheck/js/scripts.js" %}' defer></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <title>Главная страница </title>
     <link rel="stylesheet" href='{% static "vincheck/css/style1.css" %}'>
     <link rel="stylesheet" href='{% static "vincheck/css/style2.css" %}'>
@@ -35,7 +36,7 @@
                         <img src='{% static "vincheck/images/VIN.png" %}' alt="">
                     </div>
                     <div class="main_form">
-                        <form class="vin" method="post">
+                        <form class="vin" id="vin" method="post">
                             {% csrf_token %}
                             <fieldset>
                                 {% block fieild %}{% endblock %}
@@ -52,38 +53,38 @@
             <div class="footer_container">
                 <div class="footer_containernarrow">
                     <div class="footer_blocks">
-                        <a href="" class="footer_block">
+                        <a class="footer_block">
                             История технических <p>осмотров</p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a class="footer_block">
                             Нахождение в <p>розыске</p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a class="footer_block">
                             Залоги и <p>ограничения</p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a class="footer_block">
                             Проверка <p>на ДТП</p>
                         </a>
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="line"></div>
                         <div class="line"></div>
-                        <a href="" class="footer_block">
+                        <a class="footer_block">
                             Сведения технических и<p>диагностических осмотров</p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a class="footer_block">
                             Сведения о нахождение <p>автомобиля в розыске</p>
                             <p>
                                 на территории РБ и РФ
                             </p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a class="footer_block">
                             Сведения о нахождение <p>автомобиля в залоге</p>
                             <p>
                                 по данным на 2022 год
                             </p>
                         </a>
-                        <a href="" class="footer_block">
+                        <a class="footer_block">
                             Возможность проверить<p>участие авто в</p>
                             <p>
                                 ДТП
@@ -129,5 +130,21 @@
       </div>
     </div>
 </body>
+<script>
+$(document).ready(
+  $('#vin').submit(function(e){
+    e.preventDefault();
+    var serializedData = $(this).serialize();
 
+    $.ajax({
+      type:"POST",
+      url: "{% url 'main_search' %}",
+      data:  serializedData,
+      success: function(data){
+        $("#result").text(data["result"]);
+      }
+    });
+  })
+);
+</script>
 </html>
