--- a/vinautocheck/vincheck/templates/vincheck/mainopenpage.html
+++ b/vinautocheck/vincheck/templates/vincheck/mainopenpage.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src='{% static "vincheck/js/scripts.js" %}' defer></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src='{% static "vincheck/js/vin_main_search.js" %}' defer></script>
     <title>Главная страница </title>
     <link rel="stylesheet" href='{% static "vincheck/css/style1.css" %}'>
     <link rel="stylesheet" href='{% static "vincheck/css/style2.css" %}'>
@@ -130,21 +131,4 @@
       </div>
     </div>
 </body>
-<script>
-$(document).ready(
-  $('#vin').submit(function(e){
-    e.preventDefault();
-    var serializedData = $(this).serialize();
-
-    $.ajax({
-      type:"POST",
-      url: "{% url 'main_search' %}",
-      data:  serializedData,
-      success: function(data){
-        $("#result").text(data["result"]);
-      }
-    });
-  })
-);
-</script>
 </html>
